create effect for drag-drop detection

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1202,5 +1202,6 @@
   "File preview": "File preview",
   "Go Home": "Go Home",
   "Uploading (%progress%%) ": "Uploading (%progress%%) ",
-  "Confirming": "Confirming"
+  "Confirming": "Confirming",
+  "All comments are viewable by anyone, keep this in mind before writing a comment.": "All comments are viewable by anyone, keep this in mind before writing a comment."
 }
